fixed layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -236,7 +236,7 @@ img {
     height: auto;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   /* .mealFontSize {
       margin-top: 40px; 
       margin-bottom: 40px;
